--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <div class="wrapper">
 
 
-{% include 'header.html' %}
+{% header_tag %}
 
 <section class="sec topnav_sec_skelet">
 <nav class="sec topnav_sec">
