--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 							</a>
 							<a href="#" class="close_add_to_cart" data-product="{{ prod.pk }}">x</a>
 						</div>
-						<a href="" class="product_item-like"><i class="fa fa-heart"></i></a>
+						<a href="#" class="product_item-like add_to_wishlist" data-product="{{ prod.pk }}"><i class="fa fa-heart"></i></a>
 					</div>
 					</div>
 				</li>
@@ -150,7 +150,7 @@
 							</a>
 							<a href="#" class="close_add_to_cart" data-product="{{ prod.pk }}">x</a>
 						</div>
-						<a href="" class="product_item-like"><i class="fa fa-heart"></i></a>
+						<a href="#" class="product_item-like add_to_wishlist" data-product="{{ prod.pk }}"><i class="fa fa-heart"></i></a>
 					</div>
 					</div>
 				</li>
