--- a/catalog/templates/catalog/product_card.html
+++ b/catalog/templates/catalog/product_card.html
@@ -36,6 +36,6 @@
                 </a>
                 <a href="#" class="close_add_to_cart" data-product="{{ prod.pk }}">x</a>
             </div>
-            <a href="" class="product_item-like"><i class="fa fa-heart"></i></a>
+            <a href="#" class="product_item-like add_to_wishlist {% if is_liked %}liked{% endif %}" data-product="{{ prod.pk }}"><i class="fa fa-heart"></i></a>
         </div>
 </div>
