--- a/basket/templates/basket/index.html
+++ b/basket/templates/basket/index.html
@@ -170,68 +170,7 @@
 		<h2 class="sec_title have_arrows">Недавно вы смотрели</h2>
 
 		<div class="products_carousel_box">
-			<ul class="products_carousel arrowsNav owl-carousel">
-				<li class="item">
-					<!-- ITEM -->
-					<div class="product_item incatalog">
-						<div class="product_item-icons">
-							<span class="beidge count">Осталось: 5</span>
-						</div>
-						<a href="" class="product_item-image">
-							<img src="img/prod_1.jpg" alt="" />
-							<span class="product_item-instock">В наличии</span>
-						</a>
-						<a href="" class="product_item-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="product_item-artnum">Артикул: 9610</div>
-						<div class="product_item-prices">
-							<span class="product_item-price">990 ₽</span>
-						</div>
-						<div class="product_item-buttons">
-							<a href="#" class="button-o gray product_item-buy">В корзину</a>
-							<div class="product_item-counter_box">
-								<div class="counter_box">
-									<button type="button" class="counter_ctrl minus">-</button>
-									<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
-									<button type="button" class="counter_ctrl plus">+</button>
-								</div>
-								<button class="button add_to_cart_small"><img src="img/i_cart.png" alt="" /></button>
-								<a href="#" class="close_add_to_cart">x</a>
-							</div>
-							<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
-						</div>
-					</div>
-				</li>
-				<li class="item">
-					<!-- ITEM -->
-					<div class="product_item incatalog">
-						<div class="product_item-icons">
-							<span class="beidge count">Осталось: 5</span>
-						</div>
-						<a href="" class="product_item-image">
-							<img src="img/prod_1.jpg" alt="" />
-							<span class="product_item-instock">В наличии</span>
-						</a>
-						<a href="" class="product_item-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="product_item-artnum">Артикул: 9610</div>
-						<div class="product_item-prices">
-							<span class="product_item-price">990 ₽</span>
-						</div>
-						<div class="product_item-buttons">
-							<a href="#" class="button-o gray product_item-buy">В корзину</a>
-							<div class="product_item-counter_box">
-								<div class="counter_box">
-									<button type="button" class="counter_ctrl minus">-</button>
-									<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
-									<button type="button" class="counter_ctrl plus">+</button>
-								</div>
-								<button class="button add_to_cart_small"><img src="img/i_cart.png" alt="" /></button>
-								<a href="#" class="close_add_to_cart">x</a>
-							</div>
-							<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
-						</div>
-					</div>
-				</li>
-			</ul>
+			{% recently_viewed_products %}
 		</div>
 
 	</div>
