--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
 	<div class="container">
 
 		<div class="topnav_buttons">
-			<a href="#" class="button blue catalog_open"><span class="icon_menu"></span> Каталог</a>
-			<a href="catalog.html" class="button"><span class="icon_shock"></span> Шок-цена!</a>
+			<a href="/catalog/" class="button blue catalog_open"><span class="icon_menu"></span> Каталог</a>
+			<a href="/catalog/" class="button"><span class="icon_shock"></span> Шок-цена!</a>
 
 			<nav class="catalog_menu_box">
 				{% catalog_menu %}
