--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,17 @@
 			<button class="close_search_mobile" type="button">Отменить</button>
 
 			<div class="search_dropdown mCustomScrollbar" data-mcs-theme="minimal-dark">
+								<div class="search_dropdown_product">
+					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
+					<div class="sdp_info_box">
+						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
+						<div class="sdp_artnum">Артикул: 9610</div>
+						<div class="sdp_prices">
+							<span class="sdp_price">1390 ₽</span>
+							<span class="instock">В наличии</span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</form>
 
@@ -66,7 +77,7 @@
 
 <!-- MODAL -->
 
-{% include 'all_modals.html' %}
+{% all_modals_tag %}
 
 {% include 'js_files.html' %}
 
