--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
 
 		<div class="header_ib header_city">
 			<span>Ваш город:</span>
-			<a href="#cities_modal" class="header_choose_city open_modal">Москва<span class="arrow-down"></span></a>
+			<a href="#cities_modal" class="header_choose_city open_modal">{{ current_city.name }}<span class="arrow-down"></span></a>
 
 <!--			<div class="popup correct_city">-->
 <!--				<label>Всё верно?</label>-->
