--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="author" content="Frontend: Artem Lyapunov | WebElement.ru" />
 	{% include 'css_files.html' %}
+	{% block css_block %} {% endblock %}
 
 </head>
 <body>
